added private section

--- a/index.html
+++ b/index.html
@@ -248,6 +248,22 @@
     </section>
     <!--/#blog-->
 
+    <section id="private">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="passwordForm">
+                        <label>Password:</label>
+                        <input type="password" id="password" type="text">
+                        <button id="formBtn">Submit</button>
+                    </div>
+
+                    <div id="display" ></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--/#private-->
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
