--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Ben applies to jobs in Chicago and New York, planning to move wherever he gets a job first. The New York Times calls, and he moves to New York.</h2>
+                                    <h2 class="post-title bold">August 2010</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">August 2010</span>
+                                        <span class="post-date pull-left">Ben applies to jobs in Chicago and New York, planning to move wherever he gets a job first. The New York Times calls, and he moves to New York.</span>
                                     </div>
                                 </div>
                             </div>
@@ -44,9 +44,9 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Cola turns down a job at a design agency in Boston in order to move to New York - with no plan on getting or finding a job once she gets there.</h2>
+                                    <h2 class="post-title bold">May 2013</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">May 2013</span>
+                                        <span class="post-date pull-left">Cola turns down a job at a design agency in Boston in order to move to New York - with no plan on getting or finding a job once she gets there.</span>
                                     </div>
                                 </div>
                             </div>
