fixed date string

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <img src="images/mountain-splash.png" class="img-responsive center-block">
                         </div>
                         <div class="col-sm-4">
-                            <h1>In December, 2014 </h1>
+                            <h1>December 2014 </h1>
                             <p>Fate and a lot of snow brought Ben and Cola together. They met each other on a snowboarding meetup trip in Killington, VT. They were assigned the same cabin, where these two strangers found out they were actually neighbors back in Brooklyn. </p>
                         </div>
                     </div>
