--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Ben asked Cola to move into his place, she was already spending most of her time there anyways! They spent an afternoon moving her stuff in from across the street.</h2>
+                                    <h2 class="post-title bold">April 2015</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">April 2015</span>
+                                        <span class="post-date pull-left">Ben asked Cola to move into his place, she was already spending most of her time there anyways! They spent an afternoon moving her stuff in from across the street.</span>
                                     </div>
                                 </div>
                             </div>
@@ -118,9 +118,9 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Ben’s Mom and brother Tom visit Brooklyn and they spend all afternoon walking through Brooklyn Botanic Garden.</h2>
+                                    <h2 class="post-title bold">May 2015</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">May 2015</span>
+                                        <span class="post-date pull-left">Ben’s Mom and brother Tom visit Brooklyn and they spend all afternoon walking through Brooklyn Botanic Garden.</span>
                                     </div>
                                 </div>
                             </div>
@@ -145,9 +145,9 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They take their first true vacation together – a two and a half week trip to visit Cola's sister Pooja in Hong Kong, and tour Japan with Ben's friends.</h2>
+                                    <h2 class="post-title bold">November 2015</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">November 2015</span>
+                                        <span class="post-date pull-left">They take their first true vacation together – a two and a half week trip to visit Cola's sister Pooja in Hong Kong, and tour Japan with Ben's friends.</span>
                                     </div>
                                 </div>
                             </div>
@@ -220,9 +220,9 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Chihiro takes them hiking on Lake George, to a family cabin where Cola spent her childhood summers.</h2>
+                                    <h2 class="post-title bold">May 2017</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">May 2017</span>
+                                        <span class="post-date pull-left">Chihiro takes them hiking on Lake George, to a family cabin where Cola spent her childhood summers.</span>
                                     </div>
                                 </div>
                             </div>
@@ -255,9 +255,9 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">While swimming in Lake George, they relax on a floating dock and Ben proposes to Cola and makes it official – they had been talking about it long enough! (I think it’s cute and funny to have the two “long enough” statements after each other, personally, but I’d also understand it you wanna leave it out)</h2>
+                                    <h2 class="post-title bold">August 2017</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">August 2017</span>
+                                        <span class="post-date pull-left">While swimming in Lake George, they relax on a floating dock and Ben proposes to Cola and makes it official – they had been talking about it long enough! (I think it’s cute and funny to have the two “long enough” statements after each other, personally, but I’d also understand it you wanna leave it out)</span>
                                     </div>
                                 </div>
                             </div>
