--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Any of Ben’s relationships end up only lasting about 3 months, so he just wasn’t that interested in dating.</h2>
+                                    Any of Ben’s relationships end up only lasting about 3 months, so he just wasn’t that interested in dating.
                                 </div>
                             </div>
                         </div>
@@ -63,7 +63,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Cola is frustrated with “Let’s meet at a bar” being considered a date, she gives up on dating, and instead decides to go adventuring as often as possible.</h2>
+                                    Cola is frustrated with “Let’s meet at a bar” being considered a date, she gives up on dating, and instead decides to go adventuring as often as possible.
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">3 days later, Cola asked Ben out to dinner. He took her out for Falafel. They bond over their similar love of music, and the shared yearning to someday see Bonobo live in concert.</h2>
+                                    3 days later, Cola asked Ben out to dinner. He took her out for Falafel. They bond over their similar love of music, and the shared yearning to someday see Bonobo live in concert.
                                 </div>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">One day, Cola soldered some pieces onto Ben’s quadcopter. That’s when he knew the search was over.</h2>
+                                    One day, Cola soldered some pieces onto Ben’s quadcopter. That’s when he knew the search was over.
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">One night, Ben made Cola tikka masala from scratch for dinner. That’s when she knew he was the one.</h2>
+                                    One night, Ben made Cola tikka masala from scratch for dinner. That’s when she knew he was the one.
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Cola goes caving with Ben, he’s amazed she’s willing to spend the day crawling through a dark, muddy hole in the ground together.</h2>
+                                    Cola goes caving with Ben, he’s amazed she’s willing to spend the day crawling through a dark, muddy hole in the ground together.
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.</h2>
+                                    They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.
                                 </div>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Ben goes to Cola's parent's house in Boston for Christmas, he meets her sister Salome for the first time. </h2>
+                                    Ben goes to Cola's parent's house in Boston for Christmas, he meets her sister Salome for the first time.
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They move into a bigger apartment, literally right next door, and they painted the walls bright colors to make it feel more like a home.</h2>
+                                    They move into a bigger apartment, literally right next door, and they painted the walls bright colors to make it feel more like a home.
                                 </div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They’ve now made the trip on which they met into an annual tradition! Each winter they go snowboarding together almost every weekend. Even with a new puppy, they always make time for annual trips to BC, Canada to ride Whistler Blackcomb.</h2>
+                                    They’ve now made the trip on which they met into an annual tradition! Each winter they go snowboarding together almost every weekend. Even with a new puppy, they always make time for annual trips to BC, Canada to ride Whistler Blackcomb.
                                 </div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They first bonded over wanting to see Bonobo live in concert, and they finally saw him play right in their adopted home of Brooklyn!</h2>
+                                    They first bonded over wanting to see Bonobo live in concert, and they finally saw him play right in their adopted home of Brooklyn!
                                 </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">To keep up the music streak, they visit Ben’s friends Paul and Krystle in DC to go to several concerts and festivals. Chihiro’s first time in our country’s capital!</h2>
+                                    To keep up the music streak, they visit Ben’s friends Paul and Krystle in DC to go to several concerts and festivals. Chihiro’s first time in our country’s capital!
                                 </div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">It becomes apparent that they want to get married, and start planning what spending the rest of their lives together would look like.</h2>
+                                    It becomes apparent that they want to get married, and start planning what spending the rest of their lives together would look like.
                                 </div>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!</h2>
+                                    Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.</h2>
+                                    On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.
                                 </div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They attend Ben’s cousin, Seth and Melissa’s beautiful wedding in Chicago, where they reunite with Ben’s family and make some new friends.</h2>
+                                    They attend Ben’s cousin, Seth and Melissa’s beautiful wedding in Chicago, where they reunite with Ben’s family and make some new friends.
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Ben starts sending Cola syllabi for user experience design programs – she’d been talking about it for long enough!</h2>
+                                    Ben starts sending Cola syllabi for user experience design programs – she’d been talking about it for long enough!
                                 </div>
                             </div>
                         </div>
@@ -266,7 +266,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They take Chihiro to Prince Edward Island, Canada, for two and a half weeks with Cola's parents, their friend Casey, and her dog Coco. Chihiro has so much fun, she sleeps for an entire week upon returning to Brooklyn!</h2>
+                                    They take Chihiro to Prince Edward Island, Canada, for two and a half weeks with Cola's parents, their friend Casey, and her dog Coco. Chihiro has so much fun, she sleeps for an entire week upon returning to Brooklyn!
                                 </div>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
                         <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">Once a month, they host a homemade Pizza Night at their apartment to keep in touch with friends, even though they all have busy schedules now.</h2>
+                                    Once a month, they host a homemade Pizza Night at their apartment to keep in touch with friends, even though they all have busy schedules now.
                                 </div>
                             </div>
                         </div>
@@ -282,7 +282,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">They’ve traveled to 3 Continents, 6 Countries, 7 Snowboarding Mountains, 13 States - and 2 Provinces, and 14 Cities since they started dating, and they’ve just barely gotten started.</h2>
+                                    They’ve traveled to 3 Continents, 6 Countries, 7 Snowboarding Mountains, 13 States - and 2 Provinces, and 14 Cities since they started dating, and they’ve just barely gotten started.
                                 </div>
                             </div>
                         </div>
