--- a/index.html
+++ b/index.html
@@ -304,9 +304,11 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div id="passwordForm">
-                        <label>Password:</label>
-                        <input type="password" id="password" type="text">
-                        <button id="formBtn">Submit</button>
+                        <form onsubmit="return false;">
+                            <label>Password:</label>
+                            <input type="password" id="password" type="text">
+                            <button id="formBtn">Submit</button>
+                        </form>
                     </div>
 
                     <div id="display" ></div>
