updated copy for ben intro

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    Any of Ben’s relationships end up only lasting about 3 months, so he just wasn’t that interested in dating.
+                                    Ben hasn’t met anyone he finds interesting, he focuses on exploring the mountains of New England instead.
                                 </div>
                             </div>
                         </div>
