added header image, changed some colors, working on post border

--- a/index.html
+++ b/index.html
@@ -25,12 +25,25 @@
 </head><!--/head-->
 
 <body>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
+                </div>
+                <div class="timeline-date text-center">
+                    <a href="" class="btn btn-common uppercase">Continue to Site</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="blog" class="padding-bottom">
         <div class="container">
             <div class="row">
-                <div class="timeline-blog overflow padding-top">
+                <div class="timeline-blog overflow">
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">August 2010</h2>
@@ -41,7 +54,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">May 2013</h2>
@@ -52,7 +65,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Ben hasn’t met anyone he finds all that interesting, he focuses on exploring the mountains of New England instead.
@@ -60,7 +73,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Cola is frustrated with “Let’s meet at a bar” being considered a date, she gives up on dating, and instead decides to go adventuring as often as possible.
@@ -80,7 +93,7 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     3 days later, Cola asked Ben out to dinner. He took her out for Falafel. They bond over their similar love of music, and the shared yearning to someday see Bonobo live in concert.
@@ -88,7 +101,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     One day, Cola soldered some pieces onto Ben’s quadcopter. That’s when he knew the search was over.
@@ -96,7 +109,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     One night, Ben made Cola tikka masala from scratch for dinner. That’s when she knew he was the one.
@@ -104,7 +117,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">April 2015</h2>
@@ -115,7 +128,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">May 2015</h2>
@@ -126,7 +139,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Cola goes caving with Ben, he’s amazed she’s willing to spend the day crawling through a dark, muddy hole in the ground together.
@@ -134,7 +147,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.
@@ -142,7 +155,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">November 2015</h2>
@@ -153,7 +166,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Ben goes to Cola's parent's house in Boston for Christmas, he meets her sister Salome for the first time.
@@ -161,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They move into a bigger apartment, literally right next door, and they painted the walls bright colors to make it feel more like a home.
@@ -177,7 +190,7 @@
                     </div>
                     <img src="images/chihiro-field.png" class="img-responsive center-block">
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They’ve now made the trip on which they met into an annual tradition! Each winter they go snowboarding together almost every weekend. Even with a new puppy, they always make time for annual trips to BC, Canada to ride Whistler Blackcomb.
@@ -185,7 +198,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They first bonded over wanting to see Bonobo live in concert, and they finally saw him play right in their adopted home of Brooklyn!
@@ -193,7 +206,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     To keep up the music streak, they visit Ben’s friends Paul and Krystle in DC to go to several concerts and festivals. Chihiro’s first time in our country’s capital!
@@ -201,7 +214,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     It becomes apparent that they want to get married, and start planning what spending the rest of their lives together would look like.
@@ -209,7 +222,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!
@@ -217,7 +230,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">May 2017</h2>
@@ -228,7 +241,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.
@@ -236,7 +249,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They attend Ben’s cousin, Seth and Melissa’s beautiful wedding in Chicago, where they reunite with Ben’s family and make some new friends.
@@ -244,7 +257,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Ben starts sending Cola syllabi for user experience design programs – she’d been talking about it for long enough!
@@ -252,7 +265,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">August 2017</h2>
@@ -263,7 +276,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They take Chihiro to Prince Edward Island, Canada, for two and a half weeks with Cola's parents, their friend Casey, and her dog Coco. Chihiro has so much fun, she sleeps for an entire week upon returning to Brooklyn!
@@ -271,7 +284,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-left padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  padding-top arrow-left wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     Once a month, they host a homemade Pizza Night at their apartment to keep in touch with friends, even though they all have busy schedules now.
@@ -279,7 +292,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-right arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  arrow-right wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     They’ve traveled to 3 Continents, 6 Countries, 7 Snowboarding Mountains, 13 States - and 2 Provinces, and 14 Cities since they started dating, and they’ve just barely gotten started.
