removed first few posts, worked on fill width image format

--- a/index.html
+++ b/index.html
@@ -42,58 +42,14 @@
         <div class="container">
             <div class="row">
                 <div class="timeline-blog overflow">
-                    <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <h2 class="post-title bold">August 2010</h2>
-                                    <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">Ben applies to jobs in Chicago and New York, planning to move wherever he gets a job first. The New York Times calls, and he moves to New York.</span>
-                                    </div>
-                                </div>
+                    <div class="overflow padding-bottom full-width-divider">
+                            <div class="col-sm-8">
+                                <img src="images/mountain-splash.png" class="img-responsive center-block">
                             </div>
-                        </div>
-
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <h2 class="post-title bold">May 2013</h2>
-                                    <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">Cola turns down a job at a design agency in Boston in order to move to New York - with no plan on getting or finding a job once she gets there.</span>
-                                    </div>
-                                </div>
+                            <div class="col-sm-4">
+                                <h1>December 2014 </h1>
+                                <p>Fate and a lot of snow brought Ben and Cola together. They met each other on a snowboarding meetup trip in Killington, VT. They were assigned the same cabin, where these two strangers found out they were actually neighbors back in Brooklyn. </p>
                             </div>
-                        </div>
-
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Ben hasn’t met anyone he finds all that interesting, he focuses on exploring the mountains of New England instead.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Cola is frustrated with “Let’s meet at a bar” being considered a date, she gives up on dating, and instead decides to go adventuring as often as possible.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-8">
-                            <img src="images/mountain-splash.png" class="img-responsive center-block">
-                        </div>
-                        <div class="col-sm-4">
-                            <h1>December 2014 </h1>
-                            <p>Fate and a lot of snow brought Ben and Cola together. They met each other on a snowboarding meetup trip in Killington, VT. They were assigned the same cabin, where these two strangers found out they were actually neighbors back in Brooklyn. </p>
-                        </div>
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
