timeline in pretty good shape, needs images, borders around images aren't quite right

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="timeline-date text-center">
                     <a href="" class="btn btn-common uppercase">Continue to Site</a>
                 </div>
+                <div class="timeline-divider overflow padding-bottom"></div>
             </div>
         </div>
     </section>
@@ -97,29 +98,8 @@
                         <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">May 2015</h2>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">Ben’s Mom and brother Tom visit Brooklyn and they spend all afternoon walking through Brooklyn Botanic Garden.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Cola goes caving with Ben, he’s amazed she’s willing to spend the day crawling through a dark, muddy hole in the ground together.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.
                                     </div>
                                 </div>
                             </div>
@@ -131,6 +111,16 @@
                                     <h2 class="post-title bold">November 2015</h2>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">They take their first true vacation together – a two and a half week trip to visit Cola's sister Pooja in Hong Kong, and tour Japan with Ben's friends.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <div class="post-bottom overflow">
+                                        They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.
                                     </div>
                                 </div>
                             </div>
@@ -158,11 +148,16 @@
                     </div>
                 </div>
                 <div class="timeline-blog overflow">
-                    <div class="timeline-date text-center">
-                        <a href="" class="btn btn-common uppercase">December 2016</a>
-                        <p>They had always dreamed of getting a dog together, and planned to adopt that spring. But fate stepped in once again, and a friend they had dog-sat for in the past, called saying they just couldn’t take care of their puppy anymore and were looking for a good home for her.  Ben & Cola already loved this puppy, so a few weeks later, added the newest addition to their adventuring family. They named her Chihiro after one of their favorite movie characters.</p>
+                    <div class="overflow padding-bottom full-width-divider">
+                        <div class="col-sm-8">
+                            <img src="images/chihiro-field.png" class="img-responsive center-block">
+                        </div>
+                        <div class="col-sm-4">
+                            <h1>December 2016 </h1>
+                            <p>They had always dreamed of getting a dog together, and planned to adopt that spring. But fate stepped in once again, and a friend they had dog-sat for in the past, called saying they just couldn’t take care of their puppy anymore and were looking for a good home for her.  Ben & Cola already loved this puppy, so a few weeks later, added the newest addition to their adventuring family. They named her Chihiro after one of their favorite movie characters.</p>
+                        </div>
                     </div>
-                    <img src="images/chihiro-field.png" class="img-responsive center-block">
+
                     <div class="timeline-divider overflow padding-bottom">
                         <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
@@ -195,26 +190,6 @@
                         <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        It becomes apparent that they want to get married, and start planning what spending the rest of their lives together would look like.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
                                     <h2 class="post-title bold">May 2017</h2>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">Chihiro takes them hiking on Lake George, to a family cabin where Cola spent her childhood summers.</span>
@@ -227,7 +202,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.
+                                        Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +222,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        Ben starts sending Cola syllabi for user experience design programs – she’d been talking about it for long enough!
+                                        On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.
                                     </div>
                                 </div>
                             </div>
@@ -294,12 +269,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <a href="" class="btn btn-common uppercase">Now</a>
-                        <p>Whether it's a 15 hour flight to Japan, or a 15 minute walk to Prospect Park, Ben and Cola love to share amazing adventures.</p>
-                        <p>Now they’re excited to start their next adventure together, and they hope you can join them as they embark on their next journey</p>
+
+                    <div class="overflow padding-bottom full-width-divider">
+                        <div class="col-sm-8">
+                            <img src="images/boathouse.png" class="img-responsive center-block">
+                        </div>
+                        <div class="col-sm-4">
+                            <h1>Now</h1>
+                            <p>Whether it's a 15 hour flight to Japan, or a 15 minute walk to Prospect Park, Ben and Cola love to share amazing adventures. Now they’re excited to start their next adventure together, and they hope you can join them as they embark on their next journey.</p>
+                        </div>
                     </div>
-                    <img src="images/boathouse.png" class="img-responsive center-block">
+
+                    <div class="timeline-divider overflow padding-bottom"></div>
+
+                    <div class="timeline-date text-center">
+                        <a href="" class="btn btn-common uppercase">Continue to Site</a>
+                    </div>
                 </div>
             </div>
         </div>
